# Codex-Game-Jam-2026

./: .gitignore  CMakeLists.txt  LISIBILITE_BASELINE.md  PHASE0_RAPPORT.md  PHASE1_CHECKPOINT_RAPPORT.md  RAPPORT_CONFORMITE.md  RAPPORT_LISIBILITE.md  RAPPORT_LISIBILITE_Ai.md  RAPPORT_LISIBILITE_App.md  RAPPORT_LISIBILITE_Core.md  RAPPORT_LISIBILITE_EngineRender.md  RAPPORT_LISIBILITE_Race.md  RAPPORT_LISIBILITE_Render.md  RAPPORT_LISIBILITE_Rhi.md  RAPPORT_LISIBILITE_Tools.md  RAPPORT_LISIBILITE_Track.md  RAPPORT_LISIBILITE_Vehicle.md  RAPPORT_LOT_A01.md  RAPPORT_LOT_A02.md  RAPPORT_LOT_A03.md  RAPPORT_LOT_A04.md  RAPPORT_LOT_A05.md  RAPPORT_LOT_A06.md  RAPPORT_LOT_A07.md  RAPPORT_LOT_A08.md  RAPPORT_LOT_A09.md  RAPPORT_LOT_A10.md  RAPPORT_LOT_A11.md  RAPPORT_LOT_A12.md  RAPPORT_LOT_A13.md  RAPPORT_LOT_A14.md  RAPPORT_LOT_A15.md  RAPPORT_LOT_A16.md  RAPPORT_LOT_A17.md  RAPPORT_LOT_A18.md  RAPPORT_LOT_A19.md  RAPPORT_LOT_A20.md  RAPPORT_LOT_A21.md  RAPPORT_LOT_A22.md  RAPPORT_LOT_S1.md  (+4 more)
.github/workflows/: build.yml  release.yml
assets/shaders/: basic.fs  basic.vs  lit.fs  lit.vs  post.fs  sky.fs  sky.vs
circuits/: circuit_prototype.wpt
client/: CMakeLists.txt
client/include/client/input/: voxel_raycast.h
client/include/client/render/: block_colors.h  chunk_mesher.h  chunk_renderer.h  sky_renderer.h
client/include/client/ui/: crafting_ui.h  hud.h
client/src/: main.cpp
client/src/input/: voxel_raycast.cpp
client/src/render/: chunk_mesher.cpp  chunk_renderer.cpp  sky_renderer.cpp
client/src/ui/: crafting_ui.cpp  hud.cpp
common/: CMakeLists.txt
common/src/noise/: perlin.cpp
docs/: PLAN.md  PROTOCOL.md
docs/world/: AURELIA.md  AURELIA_BIBLE.md  QA_MATRIX.md  chunk_rfc.md  poi_schema.json
server_core/: CMakeLists.txt
server_core/include/server_core/: block_physics.h  chunk_generator.h  chunk_storage.h  crafting.h  entity.h  inventory.h  mob_ai.h  player_storage.h  server_core.h  world_manager.h
server_core/src/: block_physics.cpp  chunk_generator.cpp  chunk_storage.cpp  crafting.cpp  inventory.cpp  mob_ai.cpp  player_storage.cpp  server_core.cpp  world_manager.cpp
src/: main.cpp
src/Ai/: AiDriver.cpp  AiDriver.hpp
src/App/: AudioFeedback.cpp  AudioFeedback.hpp  CameraController.cpp  CameraController.hpp  GameLoop.cpp  GameLoop.hpp  GameLoopContext.hpp  GameLoopInput.cpp  GameLoopInput.hpp  GameLoopVfx.cpp  GameLoopWorld.cpp  LapTimer.cpp  LapTimer.hpp  MainApp.cpp  MainApp.hpp  RacerColors.cpp  RacerColors.hpp
src/Audio/: AudioSystem.cpp  AudioSystem.hpp
src/Engine/Assets/: AssetRegistry.cpp  AssetRegistry.hpp  CMakeLists.txt  ModelAsset.hpp  RAPPORT_LISIBILITE_Assets.md  README.md  ShaderSlot.hpp  ShaderWatcher.cpp  ShaderWatcher.hpp  TextureAsset.hpp
src/Engine/Core/: AiTag.hpp  CMakeLists.txt  Components.hpp  CoreTestJobHelpers.cpp  CoreTestRunner.cpp  CoreTestRunner.hpp  CoreTestSnapshotHelpers.cpp  CoreTestWorldHelpers.cpp  EngineCoreTest.cpp  JobSystem.cpp  JobSystem.hpp  KinematicsComponent.hpp  LapProgressComponent.hpp  NameComponent.hpp  PlayerTag.hpp  README.md  RenderMeshComponent.hpp  SnapshotBuffer.cpp  SnapshotBuffer.hpp  TransformComponent.hpp  World.cpp  World.hpp
src/Engine/Input/: InputBindings.cpp  InputBindings.hpp
src/Engine/Render/: CMakeLists.txt  PostPass.cpp  PostPass.hpp  README.md  RenderDemo.cpp  RenderDemoScene.cpp  RenderDemoScene.hpp  RenderPipeline.cpp  RenderPipeline.hpp  ScenePass.cpp  ScenePass.hpp  ShaderLocations.cpp  ShaderLocations.hpp  ShadowPass.cpp  ShadowPass.hpp
src/Engine/Rhi/: CMakeLists.txt  Device.cpp  Device.hpp  DeviceFramebuffer.cpp  DeviceFramebuffer.hpp  PassContext.hpp  RenderGraph.cpp  RenderGraph.hpp  RhiConstants.hpp  RhiTypes.hpp
src/Race/: Leaderboard.cpp  Leaderboard.hpp  RaceContactResolver.cpp  RaceContactResolver.hpp  RaceState.cpp  RaceState.hpp  ReplayRecorder.cpp  ReplayRecorder.hpp
src/Render/: CarDemo.cpp  CarLightPoints.hpp  CarRenderer.cpp  CarRenderer.hpp  CarVisual.hpp  Hud.cpp  Hud.hpp  HudDemo.cpp  TrackDemo.cpp  TrackRenderer.cpp  TrackRenderer.hpp  VfxDemo.cpp  VfxSystem.cpp  VfxSystem.hpp
src/Render/Car/: CarBodyDraw.cpp  CarBodyDraw.hpp  CarBodyPanels.cpp  CarDraw.cpp  CarDraw.hpp  CarPrimitives.cpp  CarPrimitives.hpp  CarRenderer.cpp  CarRenderer.hpp  CarWheelDraw.cpp  CarWheelDraw.hpp
src/Render/Demos/: HudDemo.cpp  TrackDemo.cpp  (+1 more)
src/Save/: SaveSystem.cpp  SaveSystem.hpp
src/Tools/: RaceSimDebug.cpp  RaceSimDebug.hpp  RaceSimPrinter.cpp  RaceSimPrinter.hpp  TelemetrySession.cpp  WorldEditor.cpp
src/Track/: Track.cpp  Track.hpp  TrackDef.hpp  TrackPresets.cpp  TrackWaypoints.cpp
src/Vehicle/: Car.cpp  Car.hpp  CarInput.hpp  CarState.hpp  CarTelemetry.cpp  CarTelemetry.hpp  CarTuning.hpp
src/ai/: ai_driver.cpp  ai_driver.h  ai_driver.hpp
src/engine/assets/: CMakeLists.txt  asset_registry.cpp  asset_registry.h  asset_registry.hpp  shader_watcher.cpp  shader_watcher.h
src/engine/core/: CMakeLists.txt  README.md  components.h  engine_core_test.cpp  frame_snapshot.cpp  frame_snapshot.h  frame_snapshot.hpp  jobs.cpp  jobs.h  jobs.hpp  world.cpp  world.h  world.hpp
src/engine/render/: CMakeLists.txt  render_demo.cpp  render_pipeline.cpp  render_pipeline.h  render_pipeline.hpp
src/engine/rhi/: CMakeLists.txt  README.md  device.cpp  device.h  device.hpp  render_graph.cpp  render_graph.h  render_graph.hpp  rhi_types.h  rhi_types.hpp
src/race/: race_state.cpp  race_state.h  race_state.hpp
src/render/: car_demo.cpp  car_renderer.cpp  car_renderer.h  car_renderer.hpp  hud.cpp  hud.h  hud.hpp  hud_demo.cpp  track_demo.cpp  track_renderer.cpp  track_renderer.h  track_renderer.hpp  vfx.cpp  vfx.h  vfx.hpp  vfx_demo.cpp
src/tools/: race_sim_debug.cpp
src/track/: track.cpp  track.h
src/vehicle/: car.cpp  car.h  car.hpp
tests/: regression_harness.cpp  world_chunk_test.cpp
tools/: split_cpp_ranges.py  split_track_renderer.py
tools/worldgen_debug/: CMakeLists.txt  main.cpp
transports/loopback/: CMakeLists.txt
transports/loopback/include/transports/loopback/: loopback_transport.h
transports/loopback/src/: loopback_transport.cpp
(+92 files in other folders)
